html:add paragraph

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia similique cum exercitationem iure, commodi nam modi omnis maxime corporis perferendis excepturi eum, sunt delectus alias recusandae labore numquam ea earum!</p>
     
 </body>
 </html>
