--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,6 @@
     </header>
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia similique cum exercitationem iure, commodi nam modi omnis maxime corporis perferendis excepturi eum, sunt delectus alias recusandae labore numquam ea earum!</p>
-    
+    <p>me again 😀</p>
 </body>
 </html>
